Removed unrelated twitter link.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <script>
       DocumentUp.document({
         repo: "jvdb/derric",
-        name: "Derric",
-        twitter: "jvandenbos"
+        name: "Derric"
       });
     </script>
   </head>
